--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,9 +2,9 @@
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "target": "ES2022",
+    "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
 
@@ -15,6 +15,8 @@
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
+    
+    /* ✅ 關鍵修正：這一行告訴 VS Code "我不需要 import React 也能用 JSX" */
     "jsx": "react-jsx",
 
     /* Linting */
